# OpT0Finder

./: configure.sh
Makefile/: GNUmakefile.CORE
dat/: README.md  detector_specs.cfg  detector_specs_icarus.cfg  detector_specs_sbnd.cfg  flashmatch_icarus.cfg  flashmatch_sbnd.cfg  flashmatch_simple_icarus.cfg
flashmatch/Algorithms/: AnodeMatch.h  BeamWindowFlashFilter.cxx  BeamWindowFlashFilter.h  ChargeAnalytical.h  LightPath.cxx  LightPath.h  LinkDef.h  MaxNPEWindow.h  NPEFlashFilter.h  NPtFilter.h  PhotonLibHypothesis.cxx  PhotonLibHypothesis.h  PhotonPropagationUtils.cxx  PhotonPropagationUtils.h  QLLMatch.cxx  QLLMatch.h  QWeightPoint.h  SelectionCostMin.h  SelectionGreedy.cxx  SelectionGreedy.h  SemiAnalyticalHypothesis.cxx  SemiAnalyticalHypothesis.h  SemiAnalyticalModel.cxx  SemiAnalyticalModel.h  TPCFlashFilter.cxx  TPCFlashFilter.h  TimeYZCompatMatch.cxx  TimeYZCompatMatch.h
flashmatch/Base/: BaseFlashHypothesis.cxx  BaseFlashHypothesis.h  BaseFlashMatch.cxx  BaseFlashMatch.h  CMakeLists.txt  FMWKInterface.cxx  FMWKInterface.h  FlashMatchManager.cxx  FlashMatchManager.h  FlashProhibitFactory.h  GNUmakefile  LinkDef.h  OpT0FinderTypes.h
flashmatch/Base/FMWKTools/: FMConfigManager.cxx  FMConfigManager.h  FMParams.cxx  FMParams.h  FMParamsUtils.cxx  FMParamsUtils.h  LinkDef.h  PSet.cxx  PSet.h  Parser.cxx  Parser.h
flashmatch/GeoAlgo/: GeoAABox.cxx  GeoAABox.h  GeoObjCollection.cxx  GeoObjCollection.h
flashmatch/PyUtil/: FMatchPyUtils.cxx  FMatchPyUtils.h  LinkDef.h  fmatch_load_pyutil.cxx  fmatch_load_pyutil.h
python/flashmatch/: __init__.py
